finished payment complete. need to work on fixing account-menu by: adjusting z-index, adjusting header size, adjusting header background z-index

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,6 @@
 
 root {
     --text-color: white;
-    --text-color-hover: aqua;
 }
 
 body {
@@ -39,11 +38,12 @@ body {
 
 .header {
     position: absolute;
-    z-index: 3;
+    z-index: 4;
     width: 100%;
     margin: 0 auto;
-    height: 280px;
+    height: auto;
     display: grid;
+    overflow: visible;
     grid-template-rows: 40px 80px;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-areas:
@@ -94,6 +94,7 @@ body {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    z-index: 5;
 }
 
 .nav-menu {
@@ -120,6 +121,7 @@ body {
     position: absolute;
     align-items: center;
     gap: 1.5rem;
+    z-index: 4;
 }
 
 .nav-menu li a:hover {
@@ -130,7 +132,18 @@ body {
     text-decoration: underline;
 }
 
-.account-menu i:hover {
+#log-in:hover i,
+#log-in:hover span {
+    color: aqua;
+}
+
+#cart:hover i,
+#cart:hover span {
+    color: aqua;
+}
+
+#wishlist:hover i,
+#wishlist:hover span {
     color: aqua;
 }
 
